# lip_reading_project

./: .gitignore  README.md  pyproject.toml
src/lip_reading_project/: =  final_transcript_generation.py  main.py  utils.py  video_context_generation.py  video_lipreading.py  video_preprocessing.py
src/lip_reading_project/espnet/nets/pytorch_backend/backbones/modules/: resnet.py  resnet1d.py
src/lip_reading_project/espnet/nets/scorers/: length_bonus.py
src/lip_reading_project/espnet/utils/: cli_utils.py
src/lip_reading_project/pipelines/: data.py
tests/: test_utils.py
