[project]
name = "lip-reading-project"
version = "0.1.0"
description = ""
authors = [
    {name = "swhh",email = "seamus.holland1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4"
dependencies = [
    "mediapipe (>=0.10.21,<0.11.0)",
    "opencv-python (<4.10)",
    "transformers (>=4.53.3,<5.0.0)",
    "scikit_image==0.24.0",
    "chainer==7.8.1",
    "av (>=10.0.0)",
    "six (>=1.16.0)",
    "scipy (>=1.3.0)",
    "hydra-core (>=1.3.2)",
    "google-genai (>=1.27.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "lip_reading_project", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
