[project]
name = "lip-reading-project"
version = "0.1.0"
description = ""
authors = [
    {name = "swhh",email = "seamus.holland1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4"
dependencies = [
    "mediapipe (>=0.10.21,<0.11.0)",
    "opencv-python (<4.10)",
    "scikit_image==0.24.0",
    "chainer (==7.8.1)",
    "av (==15.0.0)",
    "google-genai (==1.27.0)",
    "absl-py (==2.3.1)",
    "annotated-types (==0.7.0)",
    "antlr4-python3-runtime (==4.9.3)",
    "anyio (==4.9.0)",
    "attrs (==25.3.0)",
    "cachetools (==5.5.2)",
    "certifi (==2025.7.14)",
    "cffi (==1.17.1)",
    "charset-normalizer (==3.4.2)",
    "contourpy (==1.3.0)",
    "cycler (==0.12.1)",
    "exceptiongroup (==1.3.0)",
    "filelock (==3.18.0)",
    "flatbuffers (==25.2.10)",
    "fonttools (==4.59.0)",
    "fsspec (==2025.7.0)",
    "google-auth (==2.40.3)",
    "h11 (==0.16.0)",
    "hf-xet (==1.1.5)",
    "httpcore (==1.0.9)",
    "httpx (==0.28.1)",
    "huggingface-hub (==0.34.2)",
    "hydra-core (==1.3.2)",
    "idna (==3.10)",
    "imageio (==2.37.0)",
    "importlib-metadata (==4.13.0)",
    "importlib-resources (==6.5.2)",
    "jax (==0.4.30)",
    "jaxlib (==0.4.30)",
    "jinja2 (==3.1.6)",
    "moviepy (>=2.2.1,<3.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)"
]

[tool.poetry]
packages = [{include = "lip_reading_project", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
